feat(support): implement RF12 list ticket messages
